--- a/public/css/contraste.css
+++ b/public/css/contraste.css
@@ -116,3 +116,24 @@ header * {
 #gridVisuPrd *{
     background-color: #3d3d3e;
 }
+#form-cadastro-cliente{
+    background-color: #3d3d3e;
+}
+form input {
+    background: #f2f2f2;
+}
+#dataNacismento {
+    background-color: rgb(91, 90, 90);
+	border: 1px solid rgb(64, 64, 64);
+    color: rgb(255, 255, 255);
+}
+
+.txt-form{
+	background-color: rgb(91, 90, 90);
+	border: 1px solid rgb(64, 64, 64);
+    color: #e3e3e3;
+}
+#btn-cad-cliente{
+    background-color: #222;
+    color: #e3e3e3;
+}
