--- a/public/css/estiloLoja.css
+++ b/public/css/estiloLoja.css
@@ -122,17 +122,25 @@ body::-webkit-scrollbar-thumb {
 #form-cadastro-cliente{
     background-color: rgb(255, 255, 255);
 }
+#form-cadastro-produto{
+    background-color: rgb(255, 255, 255);
+}
 #dataNacismento {
     background-color: rgb(234, 234, 234);
 	border: 1px solid rgb(175, 175, 175);
     color: rgb(58, 58, 58);
+}
+#dataCadastro{
+    background-color: rgb(234, 234, 234);
+	border: 1px solid rgb(175, 175, 175);
+    color: rgb(58, 58, 58); 
 }
 .txt-form{
 	background-color: rgb(234, 234, 234);
 	border: 1px solid rgb(175, 175, 175);
     color: rgb(58, 58, 58);
 }
-#btn-cad-cliente{
+#btn-cad-forms{
     background-color: #313131;
     color: rgb(243, 243, 243);
 }
