--- a/public/css/contraste.css
+++ b/public/css/contraste.css
@@ -122,6 +122,9 @@ header * {
 #form-cadastro-cliente{
     background-color: #3d3d3e;
 }
+#form-cadastro-produto{
+    background-color: #3d3d3e;
+}
 form input {
     background: #f2f2f2;
 }
@@ -130,13 +133,17 @@ form input {
 	border: 1px solid rgb(64, 64, 64);
     color: rgb(255, 255, 255);
 }
-
+#dataCadastro{
+    background-color: rgb(91, 90, 90);
+	border: 1px solid rgb(64, 64, 64);
+    color: rgb(255, 255, 255);
+}
 .txt-form{
 	background-color: rgb(91, 90, 90);
 	border: 1px solid rgb(64, 64, 64);
     color: #e3e3e3;
 }
-#btn-cad-cliente{
+#btn-cad-forms{
     background-color: #222;
     color: #e3e3e3;
 }
