--- a/public/css/estiloLoja.css
+++ b/public/css/estiloLoja.css
@@ -148,3 +148,10 @@ body::-webkit-scrollbar-thumb {
 	font-size: 12pt;
 	background-color: rgb(254, 254, 250);
 }
+#descAnunPrd{
+    color: #313131;
+    border: 2px solid rgba(0, 0, 0, 0.123);
+}
+#btnLinkPrd a{
+    color: #313131;
+}
