--- a/public/css/estiloLoja.css
+++ b/public/css/estiloLoja.css
@@ -155,3 +155,39 @@ body::-webkit-scrollbar-thumb {
 #btnLinkPrd a{
     color: #313131;
 }
+
+
+.menu-lateral--ativo{
+    left: 0vh;
+    transition: .100s;
+    position: absolute;
+}
+.menu-lateral__link{
+    height: 64px;
+    padding-left: 64px;
+    display: flex;
+    align-items: center;
+    background-color: #a6e65a;
+    margin: 1%;
+    border-radius: 15px;
+    box-shadow: 3px 4px #a7e65a9d;
+    padding: 2px 10px;
+    border: 10px solid #a6e65a;
+    color: #2e2e2e;
+    text-decoration: none;
+}
+.menu-lateral__link--ativo{
+    color: rgb(0, 0, 0);
+    padding-left: 56px;
+    border-left: 8px solid #FFFF;
+}
+
+
+.menu-lateral_link::before{
+    content: "";
+    width: 24px;
+    height: 24px;
+    font-size: 24px;
+    position: absolute;
+    left: 24px;
+}
