--- a/public/css/estiloEscuro.css
+++ b/public/css/estiloEscuro.css
@@ -143,6 +143,11 @@ form input {
 	border: 1px solid rgb(64, 64, 64);
     color: #e3e3e3;
 }
+.option-form{
+    background-color: rgb(91, 90, 90);
+	border: 1px solid rgb(64, 64, 64);
+    color: #e3e3e3;
+}
 #btn-cad-forms{
     background-color: #222;
     color: #e3e3e3;
