--- a/public/css/estiloEscuro.css
+++ b/public/css/estiloEscuro.css
@@ -34,7 +34,7 @@ body::-webkit-scrollbar-thumb {
     display: none;
 }
 header * {
-    background-color: #262627;
+    color: #262627;
 }
 #acessibilidade * {
     background-color: #262627;
@@ -138,14 +138,21 @@ form input {
 	border: 1px solid rgb(64, 64, 64);
     color: rgb(255, 255, 255);
 }
+option{
+    background-color: rgb(91, 90, 90);
+	border: 1px solid rgb(64, 64, 64);
+    color: rgb(255, 255, 255);
+}
 .txt-form{
 	background-color: rgb(91, 90, 90);
 	border: 1px solid rgb(64, 64, 64);
     color: #e3e3e3;
 }
-.option-form{
+#cep{
     background-color: rgb(91, 90, 90);
-	border: 1px solid rgb(64, 64, 64);
+}
+.css-6hp17o-MuiList-root-MuiMenu-list{    
+    background-color: rgb(91, 90, 90);
     color: #e3e3e3;
 }
 #btn-cad-forms{
