--- a/public/css/estiloEscuro.css
+++ b/public/css/estiloEscuro.css
@@ -163,6 +163,10 @@ option{
 	color: #e3e3e3;
 	background-color: #3d3d3e;
 }
+#table-exibe tbody th{
+    background-color: #3d3d3e;
+    color: #e3e3e3;
+}
 #descAnunPrd{
     color: #e3e3e3;
     border: 2px solid rgba(0, 0, 0, 0.123);
