--- a/src/Components/Menu/Header/styles.css
+++ b/src/Components/Menu/Header/styles.css
@@ -1,7 +1,41 @@
-
-.header-container{
+*{
     @apply
-    mb-6 w-[100%]
+    font-Lato
+    transition-all
+}
+
+.header-resp{
+    @apply
+    hidden sm:hidden md:hidden lg:block xl:block
+}
+
+.header-acess{
+    @apply
+    bg-def_green
+    w-[100%] h-[35px]
+}
+
+.acess-props{
+    @apply
+    mr-12 py-1
+    justify-center flex
+}
+
+.acess-props li{
+    @apply
+    inline-flex
+    hover:text-def_white/80
+    text-def_white text-center text-txt_size_sm
+}
+
+.acess-props li span{
+    @apply
+    mx-4 cursor-pointer
+}
+
+.header-items-container{
+    @apply
+    mb-6 w-[100%] py-4
     bg-def_white 
 }
 
@@ -35,8 +69,10 @@
 
 .search-input{
     @apply
+    
     transition-all mt-6
-    w-[460px] h-[40px] p-3 text-txt_size_nr
+    md:w-[420px] lg:w-[420px]
+    w-[360px] h-[45px] p-3 text-txt_size_nr
     border-[1px] border-def_black/20 rounded-lg
     focus:border-def_black/20 focus:outline-none focus:shadow-sm
 }
