--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;900&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* @layer components{
+@layer components{
 
-} */
+    .body-container{
+        @apply
+        mx-12
+    }
+    .section-title{
+        @apply
+        font-Merriweather font-bold
+        text-def_black/80
+        text-txt_size_xl text-center
+
+    }
+    
+    .overflow-x-auto::-webkit-scrollbar{
+        @apply
+        hidden
+    }
+}
