--- a/src/admin/dashboard/Components/Sidenav/styles.css
+++ b/src/admin/dashboard/Components/Sidenav/styles.css
@@ -3,7 +3,17 @@
     flex
     h-screen
     items-center
-    /* fixed */
+}
+
+.sidenav{
+    @apply
+    h-[95vh]
+    transform transition-all duration-300
+    bg-def_vanilla
+    relative
+    ml-6
+    rounded-[50px]
+    shadow-def_lg_shadow
 }
 
 .sidenav-open{
@@ -40,31 +50,41 @@
 }
 
 .sidenav-collapsed .nav-list{
-    @apply
-    mt-12
+    @apply mt-8
 }
-
+.sidenav-collapsed .sidebar-body{
+    @apply pt-12 px-0
+}
 .sidenav-collapsed .nav-item{
     @apply
     px-[17.8px] py-2 my-4
     flex text-center align-middle
-    transform transition-all duration-300
 }
 
-.sidenav{
-    @apply
-    h-[95vh]
-    duration-500
-    bg-def_vanilla
-    relative
-    ml-6
-    rounded-[50px]
-    shadow-def_lg_shadow
+.sidenav-collapsed .nav-item span,
+.sidenav-collapsed .nav-item .bi-caret-down-fill {
+    @apply hidden opacity-0
+}
+
+.sidenav-collapsed .nav-item.open .nav-subitem{
+    @apply hidden
+}
+
+.sidenav-collapsed .navlist-icon{
+    @apply pl-2
+}
+
+.sidenav-collapsed .sidenav-title{
+    @apply hidden
+}
+
+.sidenav-collapsed .nav-item.open{
+    @apply bg-transparent text-def_dark_blue
 }
 
 .nav-list{
     @apply
-    mb-8 mx-4
+    mb-8 mx-2
 }
 
 .toggle-collapse {
@@ -104,8 +124,8 @@
     @apply
     font-semibold text-def_dark_blue
     text-center py-5
-    transition-all
-    duration-200
+    
+    
 }
 
 .user-role{
@@ -117,24 +137,28 @@
 
 .sidenav-title{
     @apply
-    mt-12
+    mt-12 ml-3
     font-semibold
     text-txt_size_nr
     text-def_dark_blue
 }
 
 .nav-subitem{
+    @apply h-0 overflow-hidden
+}
+
+.nav-item.open{
     @apply
-    h-0 overflow-hidden
+    bg-def_dark_blue
+    text-def_white
 }
 
 .nav-item.open .nav-subitem {
     @apply
-    pl-8 py-2.5
-    w-[100%]
+    ml-6 mt-2 px-2 py-2.5 w-[93%]
     font-light
     hover:bg-def_black
-    rounded-xl
+    rounded-tl-xl rounded-bl-xl
     h-auto
 }
 
@@ -143,7 +167,7 @@
     block
     text-txt_size_nr
     cursor-pointer
-    p-2.5 mx-0
+    p-2.5 mx-0 
     rounded-xl
     text-def_dark_blue font-light
     hover:bg-def_dark_blue
@@ -153,15 +177,13 @@
 
 .nav-item .bi-caret-down-fill{
     @apply
-    text-sm inline-block float-right
+    text-sm inline-block float-right py-1
 }
 
 .nav-item i{
-    @apply
-    pr-3 text-xl text-center
+    @apply pr-3 text-xl text-center
 }
 
 .hide-item{
-    @apply
-    invisible opacity-0 hidden
+    @apply invisible opacity-0 hidden
 }
