--- a/src/admin/dashboard/shared/Home/styles.css
+++ b/src/admin/dashboard/shared/Home/styles.css
@@ -5,27 +5,14 @@
     w-full
 }
 
-.time-display{
-    @apply
-    flex items-center
-}
-
-.home-header{
-    @apply
-    pl-28 sm:pl-28 sm:px-12 md:px-12 lg:px-12 py-4
-    block sm:flex md:flex lg:flex 
-    bg-def_vanilla
-    w-[100%]
-    justify-between
-    rounded-full
-}
-
 .home-welcome-card{
     @apply
     w-[100%] xl:h-[170px] h-auto md:h-auto sm:h-auto
     my-8 p-8
     rounded-[40px]
     bg-def_dark_blue
+    dark:bg-def_dark_blue/10
+    dark:border-2 dark:border-white
     text-def_white
     font-Lato
 }
@@ -54,5 +41,8 @@
 .card-statics-dashboard{
     @apply
     w-[430px] h-[290px]
+    rounded-xl
     bg-def_vanilla
+    dark:bg-def_dark_blue/10
+    dark:border-2 dark:border-white
 }
