--- a/src/admin/dashboard/styles.css
+++ b/src/admin/dashboard/styles.css
@@ -7,4 +7,50 @@
 
 @layer components{
     *{@apply m-0}
+
+    .dashboard-body{
+        width: calc(100% - 430px);
+        @apply p-6 w-full
+    }
+    .form-card{
+        @apply
+        flex justify-center
+    }
+    .form-title{
+        @apply
+        text-txt_size_lg font-semibold
+        text-def_dark_blue/80 text-left
+        dark:text-def_white
+    }
+    .col-form-label{
+        @apply
+        m-0 px-0 py-2
+        text-def_dark_blue/80
+        dark:text-white
+    }
+    .hallow-btn{
+        @apply
+        dark:border-def_cont_yellow 
+        dark:text-def_cont_yellow 
+        border-2 border-def_dark_blue
+        rounded-md text-def_dark_blue
+        bg-transparent
+    }
+    .full-btn{
+        @apply
+        border-2 border-def_dark_blue
+        bg-def_dark_blue
+        rounded-md text-def_white
+        dark:border-def_cont_yellow dark:bg-def_cont_yellow
+        dark:text-def_black
+    }
+    .btn-cad-forms{
+        @apply
+        h-[40px] w-[160px]
+    }
+    .btn-group{
+        @apply
+        flex gap-2
+        justify-end w-full
+    }
 }
